--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.5.3",
+    "kjua": "^0.6.0",
+    "ng2-pdf-viewer": "^6.3.0",
+    "pdfviewer": "^1.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
